--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,13 @@ readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+rustls = ["reqwest/rustls-tls"]
+
+
 [dependencies]
 base64 = "^0.11.0"
-reqwest = {version = "^0.10.0", features = ["json"]}
+reqwest = {version = "0.11", default-features = false, features = ["json"]}
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 regex = "1"
