--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ rustls = ["reqwest/rustls-tls"]
 
 [dependencies]
 base64 = "^0.10.0"
-reqwest = {version = "^0.9.0", default-features = false, features = ["json"]}
+reqwest = "^0.9.0"
 serde = "1"
 serde_derive = "1"
 serde_json = "1"
